<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="56dp"
            tools:context=".ShopFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_sharing13"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/anekajus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:text="@string/no_0812345678"
        app:layout_constraintStart_toEndOf="@+id/iv_sharing13"
        app:layout_constraintTop_toBottomOf="@+id/text_shop13" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:text="@string/location_jl_sadar_raya_no_01_jakarta_selatan"
        app:layout_constraintStart_toEndOf="@+id/iv_sharing13"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/text_shop13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Aneka Jus"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/iv_sharing13"
        app:layout_constraintTop_toTopOf="@+id/iv_sharing13" />

    <ImageView
        android:id="@+id/iv_sharing11"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/potonganbuahsegar"
        app:layout_constraintEnd_toEndOf="@+id/iv_sharing10"
        app:layout_constraintStart_toStartOf="@+id/iv_sharing10"
        app:layout_constraintTop_toBottomOf="@+id/iv_sharing10" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_0812345678"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/text_shop11" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:text="@string/location_jl_sadar_raya_no_01_jakarta_selatan"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/text_shop11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/potongan_buah_segar"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/text_shop10"
        app:layout_constraintTop_toTopOf="@+id/iv_sharing11" />

    <ImageView
        android:id="@+id/iv_sharing10"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/rujak"
        app:layout_constraintEnd_toEndOf="@+id/iv_sharing9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iv_sharing9"
        app:layout_constraintTop_toBottomOf="@+id/iv_sharing9" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:text="@string/no_0812345678"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/text_shop10" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:text="@string/location_jl_sadar_raya_no_01_jakarta_selatan"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/text_shop10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rujak_buah"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/text_shop9"
        app:layout_constraintStart_toStartOf="@+id/text_shop9"
        app:layout_constraintTop_toTopOf="@+id/iv_sharing10" />

    <ImageView
        android:id="@+id/iv_sharing9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/buahsegar"
        app:layout_constraintEnd_toEndOf="@+id/iv_sharing13"
        app:layout_constraintStart_toStartOf="@+id/iv_sharing13"
        app:layout_constraintTop_toBottomOf="@+id/iv_sharing13" />

    <TextView
        android:id="@+id/text_shop9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buah_segar"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/text_shop13"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_shop13"
        app:layout_constraintTop_toTopOf="@+id/iv_sharing9" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/location_jl_sadar_raya_no_01_jakarta_selatan"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_0812345678"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/text_shop9" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </TableLayout>
</androidx.core.widget.NestedScrollView>